src/App.css
.container {
  display:flex;
  border: 1px solid lightgrey;
  margin: 10px;
  padding: 10px;
  align-items: center;
  border-radius: 10px;
}

.subcontainer {
  padding-left: 20px;
  line-height: 5px;
}

.tags {
  display:flex;
}

.location {
  margin:auto;
}

.pricing {
  margin:auto;
}

.buttons {
  margin-left: auto;
  margin-right: 0;
}

img {
  height: 100px;
  width:100px;
}

button {
  width: 100px;
  margin: 2px;
  background: white;
  border-radius: 5px;
  padding: 5px;
}

